
	Added per-file overwrite confirmation on directory merging.  Thanks to
	willemw12.

	Added per-file progress and changed progress to appear in a dialog rather
	than statusbar.

	Added OS X version of sample vifmrc file.  Now this one will be used on
	first run on OS X.  Thanks to Larry Hynes (a.k.a larryhynes).

	Added --enable-coverage option to configure script.

	Changed default value of 'trashdir' from "$VIFM/Trash" to
	"%r/.vifm-Trash,$VIFM/Trash".  Thanks to Joseph LP (a.k.a. ootput).

	Made calculation of directory size visible in :jobs menu.

	Made tests less dependent on environment.  Thanks to Hendrik Jaeger (a.k.a.
	henk).

	Removed unnecessary command existence checks from vifm.vim.  Thanks to
	filterfalse.

	Auto-resize position field on the status bar to fit the text.  Thanks to
	ranousse.

	Added fallback to use "XDG Base Directory Specification" when failed to
	find configuration in other places.  Thanks to Miodrag Tokić (a.k.a.
	loonies).

	Added %px, %py, %pw and %ph macros that describe location and dimensions
	of preview area to use in external commands.  Thanks to Stephano (a.k.a.
	cao).

	Added lookup for mandoc on *nix to perform manual page to plain text
	transformation.  Thanks to Svyatoslav Mishyn, a.k.a. juef.

	Switch to utf-8 internal representation of paths on Windows.  This fixes
	issues when file name encoding doesn't match system encoding.  Thanks to
	Stas Panteleev.

	Made leaving wrong (unexpectedly removed) directory more robust.  Thanks
	to willemw12.

	Significantly reduced amount of work performed by Vifm is idle.  Thanks to
	hofheinz.

	Made message dialogs interact better with everything else on the screen.
	E.g. redraw properly after terminal resize.

	United last pattern of :substitute command with search history.  Thanks to
	filterfalse.

	Made configure script lookup curs_set in libtinfo.

	Redirect both standard output and error streams from viewers (already was
	the case for Windows).
