@@ -1838,9 +1838,8 @@ yet supported) and might be changed in future releases, or get an alias.
      - for string options - option=x
      - for string list options - option=x, option+=x and option-=x
      - for enumeration options - option=x, option+=x and option-=x
-     - for enumeration options - option=x
      - for set options - option=x, option+=x and option-=x
-     - for charset options - option=x, option+=x and option-=x
+     - for charset options - option=x, option+=x, option-=x and option^=x
     the meaning:
      - option - turn option on (for boolean) or print its value (for all
          others)
@@ -1852,6 +1851,7 @@ yet supported) and might be changed in future releases, or get an alias.
      - option=x or option:x - set option to x
      - option+=x - add x to option
      - option-=x - remove (or subtract) x from option
+     - option^=x - toggle x presence among values of the option
 
     Option name can be prepended and appended by any number of whitespace
     characters.
